--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^8.2.0",
     "apollo-server": "^3.3.0",
     "graphql": "^15.6.1",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "subscriptions-transport-ws": "^0.9.19"
   }
 }
